--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,8 @@ body {
 }
 
 .container{
-	max-width: 767px;
-	margin: 0 auto;
-	padding: 00.5em;
+	max-width: 1200px;
+	width: 90%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -46,10 +45,9 @@ p {
     padding: 0 30px;
 }
 
-/*The widths are in a percentage!*/
 header {
 	height: auto;
-	margin: 0 auto;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -69,7 +67,6 @@ header h1 span {
 
 header nav {
 	width: 100%;
-	padding: 46px 0;
 }
 header nav ul {
 	margin: 0;
@@ -78,17 +75,16 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 0.875em;
-	padding: 0.625em;
+	font-size: 0.875em;	
 	list-style: none;
 	text-align: center;
 }
 header nav ul li a{
 	text-decoration: none;
 	color:#77a466;
+	line-height: 2em;
 }
 
-/*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
 	width: 100%;
@@ -184,4 +180,47 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 00.875em;
+}
+
+@media screen and (min-width: 768px) {
+	.bottom-section {
+		width: 90%;
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		flex-flow: row;
+	}
+	.section-one .section-two .section-three {
+		width: 33%;
+		display: flex;
+		justify-content: center;
+		flex-flow: row wrap;
+	}
+	.section-two {
+		border-right: 1px solid #eee;
+		border-left: 1px solid #eee;
+	}
+}
+ 
+@media screen and (min-width:1200px) {
+	header {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-flow: row;
+	}
+	header h1 {
+		width: 45%;
+		display: flex;
+		justify-content: flex-start;
+		border-bottom: none;
+	}
+	header nav {
+		width: 55%;
+	}
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
